--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="eng">
+
+    <head>
+        <meta charset="UTF-8">
+        <title>Martin's Movie Project</title>
+    </head>
+
+    <body>
+
 <!-- Write your code below -->
 <h1>My Top Four Movies</h1>
 <h2>According to Martin</h2>
@@ -15,3 +25,6 @@
 
 <h3>4. The Matrix</h3>
 <p>Are we living in a simulation? This is what The Matrix suggests. Keanu Reeves expertly potrays NEO, Humanities Saviour.</p>
+
+    </body>
+</html>
