--- a/public/contact.html
+++ b/public/contact.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="eng">
+
+    <head>
+        <meta charset="UTF-8">
+        <title>Martin's Web Portfolio Contact Page</title>
+    </head>
+
+    <body>
+
 <h1>Contact Me</h1>
 <p>Tel: +123456789</p>
 <p>Email: no@spam.com</p>
@@ -7,3 +17,5 @@
   Some City<br />
   Some Country <br />
 </p>
+    </body>
+</html>
