--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="eng">
+
+    <head>
+        <meta charset="UTF-8">
+        <title>Martin's Birthday Invite Project</title>
+    </head>
+
+    <body>
+
 <h1>It's my Birthday!</h1>
 
 <h2>On the 14th of January!</h2>
@@ -19,3 +29,6 @@
 <a href="https://maps.app.goo.gl/JmWmvfcKgNBSc5W79">Google Maps</a>
 
 <h6>* This is just a project for a course I am doing on web development. There is no party planned.</h6>
+
+    </body>
+</html>
