--- a/public/about.html
+++ b/public/about.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="eng">
+
+    <head>
+        <meta charset="UTF-8">
+        <title>Martin's Web Portfolio: About Me</title>
+    </head>
+
+    <body>
+
 <h1>About Me</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
   elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
@@ -18,3 +28,6 @@
   interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
   nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
   neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+
+    </body>
+</html>
