--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Martin's Web Portfolio Contact Page</title>
+        <title>Martin's Web Portfolio: Contact Me</title>
     </head>
 
     <body>
