--- a/public/about.html
+++ b/public/about.html
@@ -9,25 +9,11 @@
     <body>
 
 <h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In dictum aliquam aliquet. Etiam accumsan, libero et scelerisque feugiat, nisl nisi pharetra nunc, in tristique orci libero vel sem. Pellentesque vitae rhoncus ex, elementum interdum quam. In et auctor enim. Pellentesque odio leo, feugiat a mi sed, tincidunt blandit nulla. Curabitur lacinia pretium diam, id ornare nisi consectetur sed. In sed rutrum ex. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed accumsan libero tortor, et malesuada ex sollicitudin id. Maecenas pretium, purus quis condimentum mollis, mauris nisl hendrerit lectus, vitae commodo libero nisl ac neque. Suspendisse luctus enim ac lorem euismod, a tempus lorem viverra. Curabitur commodo augue a tristique euismod. Suspendisse vitae velit turpis. Duis vestibulum rhoncus felis, ut porttitor arcu. Aenean lorem enim, efficitur et aliquam ut, tempus a massa. Pellentesque felis lectus, fringilla nec nunc quis, ornare tincidunt turpis.</p>
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
+<p>Donec ultrices tincidunt dictum. Donec convallis lacus id elementum vulputate. Donec eleifend volutpat erat, et lacinia urna gravida eu. Vivamus ac accumsan erat. Donec id fermentum nunc. Nunc ultrices imperdiet imperdiet. Mauris pellentesque, nisl vitae convallis pellentesque, tellus ligula gravida dolor, id bibendum enim urna a risus. Fusce at ipsum bibendum, commodo velit et, convallis metus. Duis vehicula consectetur ultrices. Duis pellentesque venenatis sem, et sodales ipsum feugiat quis. Ut ultricies diam quis turpis placerat vehicula. Sed scelerisque interdum tellus et imperdiet. Nullam ullamcorper blandit massa ac varius. Pellentesque tristique nunc lorem, eu commodo turpis cursus vehicula. Donec posuere diam in metus consectetur porta.</p>
 
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+<p>Integer sit amet eros pellentesque lorem interdum volutpat a ut risus. Etiam eget ultricies nisi. Integer luctus congue ante finibus elementum. Cras faucibus commodo ipsum, at vulputate libero dapibus ac. In vel quam laoreet, volutpat lectus et, tempus libero. Pellentesque suscipit euismod ultricies. Fusce facilisis, est eu cursus rhoncus, felis dolor semper est, eget pellentesque risus erat quis elit. Nam nec lacus convallis nunc vehicula molestie. Praesent convallis felis dui, vel interdum massa semper ut. Vivamus augue eros, egestas ut pharetra ac, congue sed nisi. Integer ante diam, posuere ut libero quis, congue dignissim dolor. Donec eu nibh sit amet tellus varius pulvinar nec ac velit. Praesent eu venenatis elit. Proin sollicitudin ipsum in neque dapibus maximus. Sed vitae sem mattis, aliquam magna id, aliquam diam. Vivamus at rutrum velit.</p>
 
     </body>
 </html>
